package isel.poo;

public interface Iterator<T> {
    boolean hasNext();
    T next();
}
